--- a/11 - Stripe Follow Along Nav/index-r.html
+++ b/11 - Stripe Follow Along Nav/index-r.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>Follow Along Nav</title>
   <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Cool</h2>
+  <h2>JOJO DID IT 😎</h2>
   <nav class="top">
     <div class="dropdownBackground">
       <span class="arrow"></span>
@@ -18,7 +19,7 @@
         <div class="dropdown dropdown1">
           <div class="bio">
             <img src="https://logo.clearbit.com/wesbos.com">
-            <p>Wes Bos sure does love web development. He teaches things like JavaScript, CSS and BBQ. Wait. BBQ isn't part of web development. It should be though!</p>
+            <p>JOJO code sure does love web development. He teaches things like JavaScript,python and Django.</p>
           </div>
         </div>
       </li>
@@ -66,16 +67,13 @@
       <li>
         <a href="#">Other Links</a>
         <ul class="dropdown dropdown3">
-          <li><a class="button" href="http://twitter.com/wesbos">Twitter</a></li>
-          <li><a class="button" href="http://facebook.com/wesbos.developer">Facebook</a></li>
-          <li><a class="button" href="http://wesbos.com">Blog</a></li>
-          <li><a class="button" href="http://wesbos.com/courses">Course Catalog</a></li>
+          <li><a class="button" href="http://facebook.com/josue.likem">Facebook</a></li>
+          <li><a class="button" href="">Blog</a></li>
+          <li><a class="button" href="http://coursera.com">Course Catalog</a></li>
         </ul>
       </li>
     </ul>
   </nav>
-
-<style src="style.css"></style>
 
 <script src="script.js"></script>
 
