--- a/11 - Stripe Follow Along Nav/index-r.html
+++ b/11 - Stripe Follow Along Nav/index-r.html
@@ -19,7 +19,7 @@
         <div class="dropdown dropdown1">
           <div class="bio">
             <img src="https://logo.clearbit.com/wesbos.com">
-            <p>JOJO code sure does love web development. He teaches things like JavaScript,python and Django.</p>
+            <p>JOJO sure does love web development. He teaches things like JavaScript,python and Django.</p>
           </div>
         </div>
       </li>
